<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:useDefaultMargins="false"
    android:columnCount="3"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:id="@+id/heightTextView"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/heightEditText"
        android:gravity="right"
        android:inputType="numberDecimal"
        tools:ignore="RtlHardcoded"
        android:layout_gravity="fill_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meter_abbreviation"
        android:id="@+id/heightAbbreviationTextView"
        android:layout_gravity="center_vertical" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:id="@+id/weightTextView"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weightEditText"
        android:gravity="right"
        android:inputType="numberDecimal"
        tools:ignore="RtlHardcoded"
        android:layout_gravity="fill_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kilogram_abbreviation"
        android:id="@+id/weightAbbreviationTextView"
        android:layout_gravity="center_vertical" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/units"
        android:id="@+id/unitsTextView"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="10dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/unitsRadioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit_metric"
            android:id="@+id/metricRadioButton"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit_english"
            android:id="@+id/englishRadioButton" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi"
        android:id="@+id/bmiTextView"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bmiResultTextView"
        android:gravity="right"
        android:layout_gravity="right" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="3"
        android:columnCount="2"
        android:layout_marginTop="20dp"
        android:id="@+id/bmiInfoGridLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi_info_title"
            android:id="@+id/bmiInfoTitleTextView"
            android:layout_columnSpan="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi_info_underweight"
            android:id="@+id/bmiInfoUnderweightTextView"
            android:paddingRight="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi_info_underweight_details"
            android:id="@+id/bmiInfoUnderweightDetailsTextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi_info_normal"
            android:id="@+id/bmiInfoNormalTextView"
            android:paddingRight="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi_info_normal_details"
            android:id="@+id/bmiInfoNormalDetailsTextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi_info_overweight"
            android:id="@+id/bmiInfoOverweightTextView"
            android:paddingRight="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi_info_overweight_details"
            android:id="@+id/bmiInfoOverweightDetailsTextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi_info_obese"
            android:id="@+id/bmiInfoObeseTextView"
            android:paddingRight="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi_info_obese_details"
            android:id="@+id/bmiInfoObeseDetailsTextView" />
    </GridLayout>

</GridLayout>
